优化程序代码

--- a/src/main/resources/templates/CargoBillPage/cargoBillAddForm.html
+++ b/src/main/resources/templates/CargoBillPage/cargoBillAddForm.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>新增或更新货运单</title>
+    <title>新增货运单</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -94,7 +94,7 @@
                         </a>
                         <ul class="nav-second-level" aria-expanded="false">
                             <li>
-                                <a href="form.html">新增货运单</a>
+                                <a href="cargoBillAddForm.html">新增货运单</a>
                             </li>
                             <li>
                                 <a href="list.html">货物单列表</a>
@@ -131,10 +131,10 @@
                         <div class="page-title-box">
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
-                                    <li class="breadcrumb-item active">新增或更新货运单</li>
+                                    <li class="breadcrumb-item active">新增货运单</li>
                                 </ol>
                             </div>
-                            <h4 class="page-title">新增或更新货运单</h4>
+                            <h4 class="page-title">新增货运单</h4>
                         </div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
 
     //============ 事件监听 Strat====================
 
-    //新增或更新 表单提交监听
+    //新增 表单提交监听
     $("#basic-form").on("submit",function(event){
 
         //阻止默认表单提交
@@ -329,7 +329,7 @@
         });
     }
 
-    //新增或更新数据
+    //新增数据
     function insertOrUpdate_http_ff(data) {
         axios.post('/yiyuan/CargoBill/saveOrUpdateInfo',
             data
