--- a/src/main/resources/templates/CargoBillPage/cargoBillUpdateForm.html
+++ b/src/main/resources/templates/CargoBillPage/cargoBillUpdateForm.html
@@ -326,12 +326,17 @@
         axios.post('/yiyuan/CargoBill/getInfoListPage',
             data
         ).then(function (response) {
-            var objdata=response.data.data.records
-            //数据注入到input
-            injection(objdata);
+            if(response.data.success){
+                var objdata=response.data.data.records
+                //数据注入到input
+                injection(objdata);
+            }else{
+                alert("操作失败，请联系管理员，错误原因："+response.data.message);
+            }
         }).catch(function (error) {
             //请求异常响应结果
             console.log(error);
+            alert("网络连接超时");
         });
     }
 
@@ -358,13 +363,14 @@
                         window.location.replace("/yiyuan/CargoBillPage/list.html");
                     }
                 });
-
-
+            }else{
+                alert("操作失败，请联系管理员，错误原因："+response.data.message);
             }
 
         }).catch(function (error) {
             //请求异常响应结果
             console.log(error);
+            alert("网络连接超时");
         });
     }
     //============ ajax接口调用方法区 End ====================
