优化程序代码

--- a/src/main/resources/templates/CargoBillPage/Shipping.html
+++ b/src/main/resources/templates/CargoBillPage/Shipping.html
@@ -208,19 +208,25 @@
 
 
 <!--VUE JS-->
-<script src="/yiyuan/static/assets/js/vue.js"></script>
+<!--<script src="/yiyuan/static/assets/js/vue.js"></script>-->
 <!--Axios-->
 <script src="/yiyuan/static/assets/js/axios.min.js"></script>
-<!--QS-->
-<!--<script src="https://cdn.bootcss.com/qs/6.7.0/qs.min.js"></script>-->
 <!-- Vendor js -->
 <script src="/yiyuan/static/assets/js/vendor.min.js"></script>
+<!--Layui js-->
+<script src="/yiyuan/static/layui/layui.all.js"></script>
+
 <script>
 
-    //QS数据处理配置
-    //var qs = Qs;
+    //定义Layui模块
+    var layer;
+    //加载layui模块
+    !function(){
+        layer = layui.layer;
+    }();
 
-
+    //全局加载层控制变量
+    let loding_layLoad;
 
 
     //============ 事件监听 Strat====================
@@ -241,6 +247,9 @@
         //将是否出货 字段改为 1：出货
         formData.whetherToShip = 1;
 
+        //拉起加载层
+        loding_layLoad = layer.msg('加载中', {icon: 16,shade: 0.02});
+
         //调用http发送请求
         insertOrUpdate_http_ff(formData);
     })
@@ -253,6 +262,10 @@
         axios.post('/yiyuan/CargoBill/saveOrUpdateInfo',
             data
         ).then(function (response) {
+
+            //关闭加载层
+            layer.close(loding_layLoad);
+
             if(response.data.success === true){
                 Swal.fire({
                     title: "操作成功",
@@ -274,6 +287,8 @@
         }).catch(function (error) {
             //请求异常响应结果
             console.log(error);
+            //关闭加载层
+            layer.close(loding_layLoad);
             alert("网络连接超时");
         });
     }
