--- a/src/main/resources/templates/CargoBillPage/Shipping.html
+++ b/src/main/resources/templates/CargoBillPage/Shipping.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>出货</title>
+    <title>卸货</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -133,7 +133,7 @@
                                     <li class="breadcrumb-item active">出货</li>
                                 </ol>
                             </div>
-                            <h4 class="page-title">出货</h4>
+                            <h4 class="page-title">卸货</h4>
                         </div>
                     </div>
                 </div>
@@ -153,6 +153,12 @@
                                     <label class="col-sm-2 col-form-label">销售价/吨</label>
                                     <div class="col-sm-10">
                                         <input type="number" min="0.0" step="0.01" name="sellingPrice" class="form-control" placeholder="销售价/吨" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">卸车吨数</label>
+                                    <div class="col-sm-10">
+                                        <input type="number" min="0.0" step="0.01" name="unloading_tonnage" class="form-control" placeholder="请填本车料卸货时的吨数" required>
                                     </div>
                                 </div>
                                 <div class="form-group row">
