--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -281,7 +281,7 @@
             ,limits: [10,20,30]
             ,cols: [ [ //表头
                 /*{ field: "state", checkbox: true,  width: '4%', align: 'center'},*/
-                {field: 'goodsTime', title: '购进时间' , minWidth: 110 , templet: function (item) {
+                {field: 'goodsTime', title: '装车时间' , minWidth: 110 , templet: function (item) {
                         if(item.goodsTime != null){
                             //字符串截取,只要年月日
                             return item.goodsTime.slice(0,10);
@@ -289,27 +289,27 @@
                             return "无";
                         }
                  }}
-                ,{field: 'departureLocation', title: '出发' , minWidth: 70}
-                ,{field: 'arrivedLocation', title: '到达' , minWidth: 70}
-                ,{field: 'goodsName', title: '货物名称' , minWidth: 100}
+                ,{field: 'departureLocation', title: '装车地' , minWidth: 80}
+                ,{field: 'arrivedLocation', title: '卸车地' , minWidth: 80}
+                ,{field: 'goodsName', title: '名称'  , minWidth: 100}
                 ,{field: 'goodsSpecification', title: '规格'}
-                ,{field: 'goodsUnit', title: '单位', templet: function (item) {
+                ,{field: 'goodsUnit', title: '单位', hide:true, templet: function (item) {
                     if (item.goodsUnit == '1') {
                         return "吨";
                     }else {
                         return "未定义";
                     }
                  }}
-                ,{field: 'goodsNumber', title: '吨数', minWidth: 100 , templet: function (item) {
+                ,{field: 'goodsNumber', title: '装车吨数', minWidth: 100 , templet: function (item) {
                         return  item.goodsNumber + " 吨"
                 }}
-                ,{field: 'goodsUnitPrice', title: '料款/吨' , minWidth: 80, templet: function (item) {
+                ,{field: 'goodsUnitPrice', title: '单价/吨' , minWidth: 80, templet: function (item) {
                         return  item.goodsUnitPrice + " 元"
                 }}
                 ,{field: 'goodsFreight', title: '运费/吨' , minWidth: 80, templet: function (item) {
                         return  item.goodsFreight + " 元"
                 }}
-                ,{ field: '', title: '进货价' , minWidth: 90 , templet: function (item) {
+                ,{ field: '', title: '成本价' , minWidth: 90 , templet: function (item) {
                     let num = (item.goodsUnitPrice + item.goodsFreight) * item.goodsNumber;
                     //四舍五入保两位小数
                     return num.toFixed(2);
@@ -323,7 +323,7 @@
                         return "未定义";
                     }
                  }}
-                ,{field: 'shippingTime', title: '出货时间', minWidth: 110 , templet: function (item) {
+                ,{field: 'shippingTime', title: '卸车时间', minWidth: 110 , hide:true , templet: function (item) {
                     if(item.shippingTime != null){
                         //字符串截取,只要年月日
                         return item.shippingTime.slice(0,10);
@@ -331,6 +331,13 @@
                         return "无";
                     }
                  }}
+                ,{field: 'unloadingTonnage', title: '卸车吨数', minWidth: 100 , templet: function (item) {
+                        if(item.unloadingTonnage != null){
+                            return  item.unloadingTonnage + " 吨"
+                        }else{
+                            return "无";
+                        }
+                }}
                 ,{field: 'sellingPrice', title: '销售价/吨' , minWidth: 95,  templet: function (item) {
                         //如果出货状态是1 已出货
                         if(item.whetherToShip == '1') {
@@ -342,9 +349,9 @@
                 ,{field: '', title: '销售金额' , minWidth: 95,  templet: function (item) {
                     //如果出货状态是1 已出货
                     if(item.whetherToShip == '1') {
-                        let num = (item.sellingPrice * item.goodsNumber);
-                        //四舍五入保两位小数
-                        return num.toFixed(2);
+                        let num = (item.sellingPrice * item.unloadingTonnage);
+                        //四舍五入保三位小数
+                        return num.toFixed(3);
                     }else{
                         return "无";
                     }
@@ -352,7 +359,7 @@
                 ,{field: '', title: '净利润' , minWidth: 95,  templet: function (item) {
                         //如果出货状态是1 已出货
                         if(item.whetherToShip == '1') {
-                            let num = (item.sellingPrice * item.goodsNumber - ((item.goodsUnitPrice + item.goodsFreight) * item.goodsNumber));
+                            let num = (item.sellingPrice * item.unloadingTonnage - ((item.goodsUnitPrice + item.goodsFreight) * item.unloadingTonnage));
                             //四舍五入保两位小数
                             return num.toFixed(2);
                         }else{
